--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
 googletrans = "^4.0.2"
 aio-pika = "^9.5.5"
+pydantic-settings = "^2.9.1"
 
 
 [build-system]
